--- a/index.html
+++ b/index.html
@@ -1,4 +1,9 @@
 <html>
+<style>
+body {
+  background-color: #E6E6FA;
+}
+</style>
 	<body>
 		 <form>
   		          <label for="fname">First name:</label><br>
