--- a/index.html
+++ b/index.html
@@ -1,15 +1,18 @@
 <html>
-<style>
-body {
-  background-color: #E6E6FA;
-}
-</style>
-	<body>
-		 <form>
-  		          <label for="fname">First name:</label><br>
-  			  <input type="text" id="fname" name="fname"><br>
-			  <label for="lname">Last name:</label><br>
-			  <input type="text" id="lname" name="lname">
-		</form> 
-	</body>
+
+<head>
+  <title>LINUX WORLD</title>
+</head>
+
+<body>
+
+  <h1>Welcome to Our Company</h1>
+  <h2>Web Site Main Ingredients:</h2>
+
+  <p>Pages (HTML)</p>
+  <p>Style Sheets (CSS)</p>
+  <p>Computer Code (JavaScript)</p>
+  <p>Live Data (Files and Databases)</p>
+
+</body>
 </html>
